--- a/src/app/campgrounds/show-campground/show-campground.component.css
+++ b/src/app/campgrounds/show-campground/show-campground.component.css
@@ -17,6 +17,25 @@
   text-align: center;
 }
 
+.map-display {
+  width: 300px;
+  height: 300px;
+  position: relative;
+}
+
+.side-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.loading-map-location {
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+}
+
 .action-buttons {
   text-align: right;
 }
@@ -51,6 +70,15 @@ mat-card-title {
   /* height: fit-content; */
   object-fit: contain;
   max-height: 100%;
+}
+
+.loading-campground-image {
+  margin: 200px auto;
+  vertical-align: middle;
+  text-align: center;
+
+  width: 50px;
+  height: 50px;
 }
 
 .campground-image {
