--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <span>
+  <span class="yelpcamp-logo">
     <a [routerLink]="['/']"><mat-icon>terrain</mat-icon> YelpCamp</a>
   </span>
   <span class="spacer"></span>
