--- a/src/app/campgrounds/show-campground/show-campground.component.css
+++ b/src/app/campgrounds/show-campground/show-campground.component.css
@@ -36,6 +36,99 @@
   margin-top: 20px;
 }
 
+.side-panel-title {
+  margin-top: 10px;
+  font-weight: 300;
+}
+
+/* Chat section - Starts */
+.chat-room mat-divider,
+.chat-room mat-expansion-panel {
+  margin: 20px auto;
+  width: 300px;
+}
+
+.chat-room mat-panel-description {
+  /* justify-content: center; */
+  font-size: 12px;
+}
+
+.chat-header {
+  text-align: left;
+}
+
+.chat-expanded-panel {
+  /* width: 90%; */
+  margin: 0;
+  padding: 0;
+}
+
+.chats-display {
+  height: 200px;
+  overflow: auto;
+  text-align: left;
+  line-height: 25px;
+}
+
+.chats-display ul {
+  list-style: none;
+  padding-left: 2px;
+  font-size: 12px;
+}
+
+.chat-list {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding-right: 5px;
+  /* outline: none; */
+}
+
+/* .chats-display ul li:nth-child(odd) {
+  background-color: #f0eeee;
+} */
+
+.other-user-chat {
+  background-color: #f0eeee;
+  border-radius: 5px;
+  padding: 2px;
+  box-sizing: border-box;
+}
+
+.chat-server-text {
+  margin: 15px auto;
+  margin-bottom: 0;
+  color: #8f8888;
+}
+
+.chat-server-time {
+  margin: 15px auto;
+  margin-top: 5px;
+
+  font-size: 9px;
+  color: #8f8888;
+}
+
+.chat-list-time {
+  font-size: 9px;
+  color: #8f8888;
+}
+
+.chat-form-type {
+  display: flex;
+  justify-content: space-between;
+}
+
+.chat-footer {
+  text-align: left;
+  font-style: italic;
+  font-size: 9px;
+  color: #8f8888;
+  line-height: 16px;
+}
+
+/* Chat section - Ends */
+
 .action-buttons {
   text-align: right;
 }
