added campgrounds, users, and contributors statistics on homepage

--- a/src/app/auth/user/user.component.html
+++ b/src/app/auth/user/user.component.html
@@ -127,9 +127,9 @@
                 <ng-template matStepLabel>Display Preferences</ng-template>
                 <mat-slide-toggle
                   color="accent"
-                  formControlName="showStatsDashboard"
+                  formControlName="hideStatsDashboard"
                   #showStats
-                  >Display app statistics on 'Campgrounds' page:
+                  >Hide app statistics on 'Campgrounds' page:
                   {{ showStats.checked ? "ON" : "OFF" }}
                 </mat-slide-toggle>
                 <mat-slide-toggle
