--- a/src/app/campgrounds/show-campground/show-campground.component.html
+++ b/src/app/campgrounds/show-campground/show-campground.component.html
@@ -63,11 +63,7 @@
                       ? ['other-user-chat']
                       : ['']
                   "
-                  *ngFor="
-                    let chat of chatMessageList;
-                    let i = index;
-                    trackBy: chat?.chatId
-                  "
+                  *ngFor="let chat of chatMessageList; let i = index"
                   [id]="i"
                   #chatList
                 >
