--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,11 @@
 <mat-toolbar color="primary">
   <span class="yelpcamp-logo">
-    <a [routerLink]="['/']"><mat-icon>terrain</mat-icon> YelpCamp</a>
+    <a [routerLink]="['/']"><mat-icon>terrain</mat-icon> YelpCamp</a>&nbsp;
+    <!-- <img
+      class="yelpcamp-location-flag"
+      src="/assets/svg/flags/217-india.svg"
+      alt="India FLag"
+    /> -->
   </span>
   <span class="spacer"></span>
   <ul>
